[LJI-46] Did minor adjustements in SecurityService, fixed bug in employee filtering, made sure that company admin can fetch all claims and employees of his company but default filter is used